src/main/resources/static/new.css
@font-face {
    font-family: virgil;
    src: url("webfonts/Virgil.woff2");
}

* {
    box-sizing: border-box;
}

body {
    margin: 0;
    padding: 0;
    font-family: virgil, sans-serif;
    background-color: #ededed;
    color: #333;
}

.app {
    margin: 0 auto;
    max-width: 28rem;
    min-height: 28rem;
    height: 99.98vh; /* older browsers */
    height: 99.98dvh;
    display: flex;
    flex-direction: column;
    overflow: hidden;
    background-color: #FCFAEE;
    text-align: center;
}

.app.login {
    background: #FFF4C2;
}

.app.register {
    background: #FFF0F6;
}

.app.pussyMeter {
    background: #FFC9C9;
}

.app main {
    flex-grow: 1;
    overflow: auto;
}

a {
    text-decoration: none;
    color: #b78300;
}

p, h1, h2, h3, h4, h5 {
    margin: 0;
}

p {
    word-break: break-word;
}

label {
    display: block;
    margin: 1rem 2rem;
}

.alignRight {
    text-align: right;
}

form > p {
    margin: 0 2rem;
}

header {
    position: relative;
    padding: 1rem 0;
    background: #fff0c1;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

input {
    width: 100%;
}

.pussySliderIcons img {
    width: 100px;
    height: 80px;
}

.pussySliderIcons {
    margin-top: 5rem;
    display: flex;
    justify-content: center;
}

.slideContainer input{
    padding: 0;
}

input, button {
    font: inherit;
    border: 2px solid #333;
    background: #fcfcf6;
    border-radius: .5rem;
    padding: .8rem;
}

button, label {
    cursor: pointer;
}

button.img, .stars button {
    border: none;
    background: transparent;
    border-radius: initial;
    padding: 0;
}

button {
    color: inherit;
}

button.cta {
    background: #FFC9C9;
    min-width: 6rem;
}


button.ctm {
    background: #fcfcf6;
    min-width: 6rem;
}

.stars {
    display: flex;
    flex-direction: row-reverse;
    border-top: 2px solid;
    border-bottom: 2px solid #333;
}

.stars button {
    flex-grow: 1;
}

.stars button + button {
    border-right: 2px solid #333;
}

h1 {
    margin-top: 2em;
    font-size: 2.7rem;
}

h2 {
    font-size: 1.2rem;
}
.reviewTitle {
    font-size: 1.2rem;
    margin-top: 2rem;
    color: #919191;
}

header h2 {
    position: absolute;
    left: 0;
    right: 0;
    text-align: center;
    font-size: 1.22rem;
}

header a, header div {
    position: relative;
    z-index: 10;
}

header a {
    padding: 1rem;
}
header.pussyBack {
    background: rgb(255, 201, 201);
}
h1.pussyHeader {
    margin-top: 1em;
}

main > form button {
    margin-top: 4rem;
}

.hidden {
    position: absolute;
    left: -9999px;
    top: -9999px;
    width: 0;
    height: 0;
    overflow: hidden;
}

.fade {
    opacity: 0.4;
    filter: blur(1px);
}

.note {
    opacity: 0.5;
    margin-bottom: 3rem;
}

.addTask {
    display: flex;
    padding: 0.8rem 0.5rem;
}

.task {
    display: flex;
    border-bottom: 1px solid #dddad7;
    padding-left: .5rem;
    position: relative;
}

.task[data-done=true] img.notdone { display: none; }
.task[data-done=false] img.isdone { display: none; }

.task p {
    flex-grow: 1;
    text-align: left;
    padding: 1rem .5rem;
}

.task form {
    align-self: center;
}

.task .due {
    white-space: nowrap;
    color: #919191;
    align-self: center;
    padding: 1rem .5rem;
}
.due {
    margin-right: 0;
}

.task button, .task img {
    display: block;
}

.task button {
    padding: 1rem;
    padding-left: 0.5rem;
}

.prio1, .prio2, .prio3, .prio4 {
    width: .45rem;
    position: absolute;
    left: 0;
    top: .3rem;
    bottom: .3rem;
}

.prio1 {
    background: #c7e9fb;
}

.prio2 {
    background: #c3eab5;
}

.prio3 {
    background: #f5e48d;
}
.prio4 {
    background: #ffb692;
}

img {
    height: 1.2rem;
}

form + p {
    margin-top: 2rem;
}

main > p:last-child {
    margin-bottom: 4rem;
}

footer {
    background: #fff0c1;
    border-top: 2px solid #333;
    padding-bottom: env(safe-area-inset-bottom);
}

footer img {
    height: 3rem;
}

footer label {
    margin: 0;
    padding: .5rem;
}

footer input + img  {
    margin-left: 0.5rem;
}

footer input, .stars button {
    padding: .5rem .5rem;
}

.stars button {
    background: #fcfcf6;
    padding-bottom: 0;
}

.stars > :nth-child(1):hover, .stars > :nth-child(1).active { background: #ffb692 }

.stars > :nth-child(2):hover, .stars > :nth-child(2).active { background: #fff0c1 }

.stars > :nth-child(3):hover, .stars > :nth-child(3).active { background: #c3eab5 }

.stars > :nth-child(4):hover, .stars > :nth-child(4).active { background: #c7e9fb }


.weekSummary h1 {
    font-size: 5rem;
    margin-top: 1.5rem;
}
.weekSummary h2 {
    margin-top: 0;
    margin-bottom: 1.2rem;
    opacity: 1;
}
.weekSummary p, .week-review .awesome {
    padding: 1rem 2rem;
    line-height: 1.666;
}

.weekSummary .weekNote {
    border-bottom: 1px solid #dddad7;
    margin-top: 2rem;
}

.weekSummary .weekNote, .week-review .awesome {
    font-size: 86%;
    padding: 1rem;
    text-align: left;
    color: #333;
    line-height: 1.666;
}

.app.week-review {
    background: #FCFAEE;
}

.week-review .task p {
    cursor: pointer;
}

button.startWeek {
    background: #c3eab5;
    margin-bottom: 25vh;
    margin-top: 10vh;
}

.stickman {
    height: 4rem;
    display: block;
    margin-left: 78%;
}

.slider {
    -webkit-appearance: none;
    appearance: none;
    height: 2px;
}

.slider::-webkit-slider-thumb {
    -webkit-appearance:none;
    width:20px;
    height:20px;
    border-radius:50%;
    background-color:#fcfcf6;
}

#week-progressbar {
    position: absolute;
    z-index: 1;
    bottom: 0;
    height: 2px;
    background-color: #333;
}

.dropbtn {
    border: none;
    padding : .5rem;
    margin-left: .666rem;
    background-color: #fff0c1;
    height: 3.25rem;
}

.dropbtn img {
    height: 2rem;
}

.dropdown {
    position: relative;
    display: inline-block;
}

.dropdown-content {
    display: none;
    position: absolute;
    background-color: #FFC9C9;
    min-width: 9rem;
    z-index: 100;
    box-shadow: 0 .3rem .4rem 0 rgba(255, 180, 180, 0.3);
}

.dropdown-content a {
    color: black;
    padding: .75rem 1rem;
    text-align: left;
    display: block;
}

.dropdown-content a:hover {
    background-color: #ffb4b4;
}

.taskStatus {
    align-self: center;
    padding: 0 0.3rem;
}

.checkboxContainer {
    padding: 0.5rem;
    margin: 0;
    align-self: center;
    cursor: pointer;
    caret-color: transparent;
    position: relative;
}

.task:has(.toDelegate:checked) {
    background: #ebffe7;
}
.task:has(.cross), .task:has(input[value="true"]) {
    background: #fcfcf6;
}

span.weekIcon, input.toDelegate {
    display: none;
}

input.toDelegate + span.weekIcon {
    display: initial;
}
input.toDelegate:checked + span.weekIcon {
    display: none;
}
input.toDelegate:checked + span.weekIcon + span.weekIcon {
    display: initial;
}


.icon-unchecked {
    height: 2rem;
}

.left-behind .task button {
    border: none;
    padding: .4rem;
}

#logout {
    cursor: pointer;
}

.NoTaskPlaceholder{
    margin: 4.5rem 2rem;
    opacity: 0.6;
}

.NoTaskPlaceholder img{
    width: 12.5rem;
    height: auto;
}

.NoTaskPlaceholder p {
    margin-bottom: 1.5rem;
    line-height: 1.6;
}

.password {
    position: relative;
}

#showPassword {
    position: absolute;
    right: 1rem;
    top: 50%;
    transform: translateY(-50%);

}

@media (min-width: 460px) {
    .app {
        margin: 1rem auto;
        box-shadow: 0 0 0 3px black;
        border-radius: 1rem;
        max-width: 404px;
        height: calc(100svh - 2rem);
    }
}

